Adding new information to HTML

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -45,6 +45,14 @@
                             links above (Documentation-Docs && Documentation-Redocs) and any REST client
                             like Postman, Insomnia, RapidAPI, etc. 
                         </p>
+                        <p>
+                            For testing purpose the following credentials can be used: 
+                            <br>
+                            user: TestUser12 <br>
+                            password: 123456<br><br>
+                            POST request must be sent to the end point http://post-api-production-9c43.up.railway.app/api/auth/login/
+                            in order to get the token that is needed in each unsafe method.
+                        </p>
                         <p style="color: #DF2E38">
                             Notice that the Admin link is just for the developer of this API.
                         </p>
