--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -42,15 +42,15 @@
                         <h5 class="text-uppercase">General Description</h5>
                         <p>
                             This is a small API which you can test using our documentation by clicking 
-                            links above (Documentation-Docs && Documentation-Redocs) and any REST client
-                            like Postman, Insomnia, RapidAPI, etc. 
+                            links above Documentation-Docs (use Django Login button) && Documentation-Redocs 
+                            or any REST client like Postman, Insomnia, RapidAPI, etc. 
                         </p>
                         <p>
                             For testing purpose the following credentials can be used: 
                             <br>
                             user: TestUser12 <br>
                             password: 123456<br><br>
-                            POST request must be sent to the end point http://post-api-production-9c43.up.railway.app/api/auth/login/
+                            POST request must be sent to the end point https://www.blogapi.fracodev.click/api/auth/login/
                             in order to get the token that is needed in each unsafe method.
                         </p>
                         <p style="color: #DF2E38">
