modifing documentation information in the home page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -41,9 +41,9 @@
                         <!--Grid column-->
                         <h5 class="text-uppercase">General Description</h5>
                         <p>
-                            This is a small API which you can test using our documentation by clicking 
-                            links above Documentation-Docs (use Django Login button) && Documentation-Redocs 
-                            or any REST client like Postman, Insomnia, RapidAPI, etc. 
+                            This is a small API which you can test using any REST client like Postman, 
+                            Insomnia, RapidAPI, etc. Please read before our documentation visting
+                            documentation links above (Documentation-Docs | Documentation-Redocs)
                         </p>
                         <p>
                             For testing purpose the following credentials can be used: 
